--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -1,6 +1,6 @@
-<div class="continut">
+<div class="continut" ng-controller="homeCtrl">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="navigare">
+    <nav class="navbar navbar-expand-md" id="navigare" ng-class="{'navbar-dark' : !isUserAdmin(), 'bg-dark': !isUserAdmin(), 'navbar-light' : isUserAdmin(), 'bg-light': isUserAdmin() }">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="../../../images/logos/logo_transparent-small.png" style="height:90px; width:150px" alt="">
@@ -22,14 +22,10 @@
                         <a class="nav-link" href="/index.html#!/movies">Movies</a>
                     </li>
                     <li class="nav-item mystyle">
-                        <a class="nav-link" href="#myModal" class="trigger-btn" data-toggle="modal">Login/Register</a>
-                    </li>
-                    <li class="nav-item mystyle">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#myModal" class="trigger-btn" data-toggle="modal">{{ loginButtonText() }}</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
 </div>
