--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -13,12 +13,12 @@
               </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active mystyle">
+                    <li class="nav-item mystyle" ng-class="{active: isCurrentRoute('/')}">
                         <a class="nav-link" href="#">Home
                       <span class="sr-only">(current)</span>
                     </a>
                     </li>
-                    <li class="nav-item mystyle">
+                    <li class="nav-item mystyle" ng-class="{active: isCurrentRoute('movies')}">
                         <a class="nav-link" href="/index.html#!/movies">Movies</a>
                     </li>
                     <li class="nav-item mystyle">
