--- a/frontend/css/movies.css
+++ b/frontend/css/movies.css
@@ -12,9 +12,9 @@
 
 }
 .date-select{
-    font-family: 'Indie Flower',cursive;
+    font-family: 'Patrick',cursive;
     font-size: 22px;
-    color: #52141a;
+    color: white;
     font-weight: bold;
     float:left;
     margin:auto;
