--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -1,8 +1,8 @@
-<div class="continut bg-gray">
+<div class="continut bg-gray mt-5">
     <div class="wrapper-movies flex-column mx-auto col-md-9">
         <div class="row flex-column justify-content-center">
             
-                <div class="form-group col-md-12 text-center" >
+                <div class="form-group col-md-12 text-center mb-5" >
                     <div class="row">
                 <div  class="date-select col-md-3">Select a date</div>
               
@@ -10,7 +10,7 @@
                         <div class="control col-md-5">
                             <input id="date-birth" class="form-control " type="date" ng-model="dateBirth"></div>
                            <div class="col-md-4">
-                            <button type="submit" class="btn btn-danger " ng-click="search()">Search</button>
+                            <button type="submit" class="btn btn-danger float-left " ng-click="search()">Search</button>
                         </div>
                     </div>
                         <div class="row" ng-if="clicked">
@@ -47,8 +47,8 @@
                         <td style="width:auto;">
                             <p class="movie-title">{{movie.room}}</p>
                         </td>
-                        <td><button class="btn btn-warning" ng-click="openMovieDetails(movie.id)">About</button></td>
-                        <td><button class="btn btn-danger">Book</button></td>
+                        <td><button class="btn btn-about" ng-click="openMovieDetails(movie.id)">About</button></td>
+                        <td><button class="btn btn-book">Book</button></td>
                     </tr>
                 </tbody>
             </table>
@@ -74,7 +74,9 @@
         width: 60px;
         margin-right: 20px;
     }
-    
+    .table td{
+        text-align:center;
+    }
     @media only screen and (max-width: 760px),
     (min-device-width: 768px) and (max-device-width: 1024px) {
         /* Force table to not be like tables anymore */
@@ -97,6 +99,7 @@
             padding-top: 1px;
             padding-right: 1px;
             padding-bottom: 1px;
+        
         }
         tr {
             margin: 0 0 1rem 0;
