--- a/frontend/views/partials/carousel.html
+++ b/frontend/views/partials/carousel.html
@@ -1,7 +1,7 @@
 <div class="wrapp">
     <div class="color">
 <div class="continut banner d-flex justify-content-center">
-    <div  class="carousel slide  my-5 mx-auto" data-ride="carousel">
+    <div  class="carousel slide  my-5 mx-auto" data-ride="carousel" data-interval="2000">
         <div class="carousel-inner" id="carouselExampleSlidesOnly">
             <div class="carousel-item active">
                 <img class="d-block " src="images/maxresdefault (1).jpg" alt="First slide" id="carousel-img">
