Use HomeCtrl as controller for the parent layout. Use ng-src for images.

--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -1,4 +1,4 @@
-<div class="continut" ng-controller="homeCtrl">
+<div class="continut">
 
     <nav class="navbar  navbar-expand-md" id="navigare" ng-class="{'transparent' : !isUserAdmin(), 'navbar-dark' : isUserAdmin(), 'bg-dark': isUserAdmin(),'transparent': isCurrentRoute('/movies'),'navbar-dark': isCurrentRoute('/'),'bg-dark': isCurrentRoute('/'),}">
         <div class="container">
