--- a/frontend/views/partials/modals/moviedetails.html
+++ b/frontend/views/partials/modals/moviedetails.html
@@ -3,7 +3,7 @@
         <div class="row">
             <!-- Modal Header -->
             <div class="col-md-6">
-                <img src="../../../images/{{movie.src}}" class="mx-auto" style="width:100%;height: 100%">
+                <img ng-src="../../../images/{{movie.src}}" class="mx-auto" style="width:100%;height: 100%">
 
             </div>
 
