--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -370,7 +370,7 @@ footer{
   
 }
 .body-bg{
-  background-image:url("../images/purrfect.jpg");
+  background-image:url("../images/10.png");
   background-size:cover;
   background-repeat: no-repeat;
 }
