--- a/frontend/views/partials/modals/login/loginModal.html
+++ b/frontend/views/partials/modals/login/loginModal.html
@@ -1,22 +1,22 @@
 <div class="styling">
-        <div>
-            <div class="row">
-                <!-- Modal body -->
-                <div class="col-md-12">
-                    <div class="col-md-6">Username</div>
-                    <div class="col-md-6">
-                        <input type="text" id="username" ng-model="credentials.username">
-                    </div> <br />
-                    <div class="col-md-6">Password</div> 
-                    <div class="col-md-6">
-                        <input type="password" id="password" ng-model="credentials.password"> 
-                    </div>
-                    <br /><br />
+    <div>
+        <div class="row">
+            <!-- Modal body -->
+            <div class="col-md-12">
+                <div class="col-md-6">Username</div>
+                <div class="col-md-6">
+                    <input type="text" id="username" ng-model="user.username">
+                </div> <br />
+                <div class="col-md-6">Password</div>
+                <div class="col-md-6">
+                    <input type="password" id="password" ng-model="user.password">
+                </div>
+                <br /><br />
 
-                    <div class="col-md-12" style="text-align: center">
-                        <button type="button" ng-click="login(credentials)">Login</button>
-                    </div>
+                <div class="col-md-12" style="text-align: center">
+                    <button type="button" ng-click="login(user)">Login</button>
                 </div>
             </div>
         </div>
     </div>
+</div>
