--- a/frontend/views/partials/modals/moviedetails.html
+++ b/frontend/views/partials/modals/moviedetails.html
@@ -8,7 +8,7 @@
             </div>
 
             <!-- Modal body -->
-            <div class="col-md-6 ">
+            <div class="col-md-6 mt-5">
                 <p class="movie-modal"><strong>Title : </strong>{{movie.title}}</p>
                 <p class="movie-modal"><strong>Release Year : </strong> {{movie.year}}</p>
                 <p class="movie-modal"><strong>Room : </strong>{{movie.room}}</p>
