--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -296,17 +296,21 @@ footer{
   border-radius: 50% !important;
 }
 
+#myModal{
+  background-color:white;
+}
 .modal-login {
   color:white;
   width: 350px;
-  background-color: rgba(0,0,0,0.4);
+  background-color: white;
+  
 
 }
 .modal-login .modal-content {
   padding: 20px;
   border-radius: 5px;
   border: none;
-  background-color: rgba(0,0,0,0.4);
+
 }
 .modal-login .modal-header {
   border-bottom: none;
