--- a/frontend/views/adminpage.html
+++ b/frontend/views/adminpage.html
@@ -6,10 +6,19 @@
     .latime {
         width: 80px;
     }
-</style>
+    .btn-add{
+        background-color:transparent;
+        border: 2px solid black;
+        color:black;
+        font-size:16px;
+        font-weight: bold;
 
-<div class="continut mx-auto  justify-content-center mt-5 mb-4">
-    <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#addmovie">Add New Movie</button>
+    }
+    
+</style>
+<div class="background">
+<div class="continut mx-auto  justify-content-center ">
+    <button type="button" class="btn btn-add mt-3 mb-3" data-toggle="modal" data-target="#addmovie">Add New Movie</button>
 </div>
 <div class="continut flex-column">
     <div class="container mx-auto ">
@@ -27,26 +36,27 @@
                     </tr>
                 </thead>
                 <tbody role="rowgroup">
-                    <tr role="row" ng-repeat="contact in model.movies" ng-include="getTemplate(contact)">
+                    <tr role="row" ng-repeat="movie in model.movies" ng-include="getTemplate(movie)">
                     </tr>
                 </tbody>
             </table>
 
             <script type="text/ng-template" id="display">
-                <td style="width:auto;">{{contact.title}}</td>
-                <td style="width:auto;">{{contact.date}}</td>
-                <td style="width:auto;">{{contact.time}}</td>
-                <td style="width:auto;">{{contact.room}}</td>
-                <td style="width:auto;">{{contact.actors}}</td>
-                <td style="width:auto;">{{contact.year}}</td>
-                <td>
-                    <div style="width:auto;height:auto;word-wrap: break-word">{{contact.description}}</div>
+                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{movie.title}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph">{{movie.date}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph">{{movie.time}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph">{{movie.room}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph">{{movie.actors}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph">{{movie.year}}</p></td>
+                <td style="height:auto;" class="details">
+                    <div style="width:auto;height:auto;word-wrap: break-word; text-align: justify;
+                    text-justify: inter-word;" class="details"><p class="paragraph">{{movie.description}}</p></div>
                 </td>
                 <td>
-                    <button class="btn btn-dark latime" ng-click="editContact(contact)">Edit</button>
+                    <button class="btn btn-dark latime" ng-click="editMovie(movie)">Edit</button>
                 </td>
                 <td>
-                    <button class="btn btn-danger latime" ng-click="deleteContact($index)">Delete</button>
+                    <button class="btn btn-danger latime" ng-click="deleteMovie($index)">Delete</button>
 
                 </td>
 
@@ -60,7 +70,7 @@
                 <td><input type="text" style="width: 90%" ng-model="model.selected.year" /></td>
                 <td><input type="text" style="width: 90%" ng-model="model.selected.description" /></td>
                 <td>
-                    <button class="btn btn-info latime" ng-click="saveContact($index)">Save</button>
+                    <button class="btn btn-info latime" ng-click="saveMovie($index)">Save</button>
                     <button class="btn btn-danger latime" ng-click="reset()">Cancel</button>
                 </td>
             </script>
@@ -77,35 +87,48 @@
                         </div>
                         <div class="modal-body">
                             <form>
-                                <div class="form-group">
+                                <div class="form-group row">
+                                    <div class="col-md-6">
                                     <label for="exampleInputName">Title</label>
                                     <input type="text" class="form-control" id="exampleInputName" ng-model="title" placeholder="Title">
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputage">Date</label>
-                                    <input type="text" class="form-control" id="exampleInputAge" ng-model="date" placeholder="Date" />
+                                <div class="col-md-6">
+                                        <label for="exampleInputDate">Date</label>
+                                    <input type="text" class="form-control" id="exampleInputDate" ng-model="date" placeholder="Date" />
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputSalary">Time</label>
-                                    <input type="text" class="form-control" id="exampleInputSalary" ng-model="time" placeholder="Time">
+                            </div>
+                                <div class="form-group row">
+                                    <div class="col-md-6">
+                                            <label for="exampleInputTime">Time</label>
+                                            <input type="text" class="form-control" id="exampleInputTime" ng-model="time" placeholder="Time">
+                                    </div>
+                                    <div class="col-md-6">
+                                            <label for="exampleInputRoom">Room</label>
+                                            <input type="text" class="form-control" id="exampleInputRoom" ng-model="room" placeholder="Room">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputSalary">Room</label>
-                                    <input type="text" class="form-control" id="exampleInputSalary" ng-model="room" placeholder="Room">
+                               
+                                <div class="form-group row">
+                                    <div class="col-md-6">
+                                    <label for="exampleInputActors">Actors</label>
+                                    <input type="text" class="form-control" id="exampleInputActors" ng-model="actors" placeholder="Actors">
+                                    </div>
+                                    <div class="col-md-6">
+                                            <label for="exampleInputYear">Year</label>
+                                            <input type="text" class="form-control" id="exampleInputYear" ng-model="year" placeholder="Year">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputSalary">Actors</label>
-                                    <input type="text" class="form-control" id="exampleInputSalary" ng-model="actors" placeholder="Actors">
+                                
+                                <div class="form-group row">
+                                    <div class="col-md-6">
+                                    <label for="exampleInputDesc">Description</label>
+                                    <input type="text" class="form-control" id="exampleInputDesc" style="word-wrap: break-word" ng-model="description" placeholder="Description">
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputSalary">Year</label>
-                                    <input type="text" class="form-control" id="exampleInputSalary" ng-model="year" placeholder="Year">
+                                <div class="col-md-6">
+
                                 </div>
-                                <div class="form-group">
-                                    <label for="exampleInputSalary">Description</label>
-                                    <input type="text" class="form-control" id="exampleInputSalary" style="word-wrap: break-word" ng-model="description" placeholder="Description">
                                 </div>
-                                <button type="button" class="btn btn-warning" ng-click="addEmployee()" data-dismiss="modal">Add movie</button>
+                                <button type="button" class="btn btn-warning" ng-click="addMovie()" data-dismiss="modal">Add movie</button>
                             </form>
                         </div>
                         <div class="modal-footer">
@@ -118,14 +141,33 @@
         </div>
     </div>
 </div>
-
+</div>
 <style>
     /*
 	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
-	*/
+    */
+    .background{
+        background-image: url("../../images/1.jpg");
+        width:100%;
+        height:auto;
+        background-size:cover;
+        background-repeat:no-repeat;
+    }
+    th{
+        color:black;
+    }
+    .details{
+        color:black;
+        font-size:17px;
+        font-family: 'Patrick Hand';
+        text-align:center;
+    }
     
     @media only screen and (max-width: 760px),
     (min-device-width: 768px) and (max-device-width: 1024px) {
+        .paragraph{
+        margin-top:25px;
+    }
         /* Force table to not be like tables anymore */
         table,
         thead,
@@ -172,28 +214,28 @@
     You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
 		*/
         td:nth-of-type(1):before {
-            content: "Title";
+            content: "Title";color:black;
         }
         td:nth-of-type(2):before {
-            content: "Date";
+            content: "Date";color:black;
         }
         td:nth-of-type(3):before {
-            content: "Time";
+            content: "Time";color:black;
         }
         td:nth-of-type(4):before {
-            content: "Room";
+            content: "Room";color:black;margin-top:25px;
         }
         td:nth-of-type(5):before {
-            content: "Actors";
+            content: "Actors";color:black;margin-top:25px;
         }
         td:nth-of-type(6):before {
-            content: "Year";
+            content: "Year";color:black;margin-top:25px;
         }
         td:nth-of-type(7):before {
-            content: "Description";
+            content: "Description";color:black;margin-top:25px;
         }
         td:nth-of-type(8):before {
-            content: "";
+            content: "";margin-top:25px;
         }
     }
 </style>
